--- a/libs/components/src/lib/components/tree/components/tree-item/tree-item.component.less
+++ b/libs/components/src/lib/components/tree/components/tree-item/tree-item.component.less
@@ -1,6 +1,6 @@
 :host {
   display: block;
-  color: var(--prizm-text-main);
+  color: var(--prizm-v3-text-icon-secondary);
 
   &.use-padding-indent {
     .prizm-tree-item__children {
