--- a/apps/doc/src/app/components/table/examples/table-search-example/table-search-example.component.html
+++ b/apps/doc/src/app/components/table/examples/table-search-example/table-search-example.component.html
@@ -17,6 +17,11 @@
           <input #input (enter)="search($event, 'name')" prizmInput placeholder="Поиск" />
           <button
             [interactive]="true"
+            (click)="input.value = ''; search('', 'name')"
+            prizmInputIconButton="cancel-delete-content"
+          ></button>
+          <button
+            [interactive]="true"
             (click)="search(input.value, 'name')"
             prizmInputIconButton="sort-zoom-in"
           ></button>
