--- a/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-toolbar/prizm-navigation-menu-toolbar.component.less
+++ b/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-toolbar/prizm-navigation-menu-toolbar.component.less
@@ -18,7 +18,7 @@
       margin-left: auto;
 
       button[prizmIconButton] {
-        margin: 0px 1px;
+        margin-left: 8px;
       }
     }
   }
