--- a/apps/doc/src/app/components/toast/examples/toast-example/toast-example.component.html
+++ b/apps/doc/src/app/components/toast/examples/toast-example/toast-example.component.html
@@ -19,7 +19,7 @@
     <div>В toast-сообщении старайтесь уместить текст в 2 строки.</div>
 
     <div class="date">16.05.2022 10:00</div>
-    <div class="link">
+    <div class="link-content">
       <a href="#">Ссылка</a>
     </div>
     <div class="footer">
