--- a/libs/components/src/lib/components/table/th/th.style.less
+++ b/libs/components/src/lib/components/table/th/th.style.less
@@ -80,8 +80,13 @@
       justify-content: center;
 
       &_active {
-        color: var(--prizm-v3-button-primary-solid-active);
+        color: var(--prizm-v3-button-primary-solid-default);
       }
+    }
+
+    &__number {
+      min-width: 16px;
+      text-align: end;
     }
   }
 }
