fix: add min max input number example

--- a/apps/doc/src/app/components/input/input-number/input-number-example.component.html
+++ b/apps/doc/src/app/components/input/input-number/input-number-example.component.html
@@ -23,6 +23,14 @@
     <prizm-doc-example id="counter-invalid" [content]="prizmInputNumberInvalid" heading="Form group">
       <prizm-input-number-invalid-example></prizm-input-number-invalid-example>
     </prizm-doc-example>
+
+    <prizm-doc-example
+      id="number-min-max"
+      [content]="prizmInputNumberMinMax"
+      heading="Input number min max example"
+    >
+      <prizm-input-number-min-max-example></prizm-input-number-min-max-example>
+    </prizm-doc-example>
   </ng-template>
 
   <ng-template prizmDocPageTab prizmDocHost>
