--- a/apps/doc/src/app/components/file-upload/file-upload-example.component.html
+++ b/apps/doc/src/app/components/file-upload/file-upload-example.component.html
@@ -147,7 +147,7 @@
         documentationPropertyName="filesValidationErrors"
         documentationPropertyType="Event"
         documentationPropertyMode="output"
-        documentationPropertyType="[p: string]: PrizmFileValidationErrors"
+        documentationPropertyType="Map<filename, PrizmFileValidationErrors>"
       >
         FilesValidationErrors
       </ng-template>
