--- a/apps/doc/src/app/components/input/input-number/input-number-example.component.html
+++ b/apps/doc/src/app/components/input/input-number/input-number-example.component.html
@@ -114,6 +114,7 @@
               [prizmHintDirection]="prizmHintDirection"
               [prizmHintCanShow]="prizmHintCanShow"
               [required]="required"
+              [title]="title"
               prizmInputNumber
             />
 
@@ -165,6 +166,15 @@
         documentationPropertyMode="input"
       >
         Placeholder
+      </ng-template>
+
+      <ng-template
+        [(documentationPropertyValue)]="title"
+        documentationPropertyName="title"
+        documentationPropertyType="string"
+        documentationPropertyMode="input"
+      >
+        Title attributre
       </ng-template>
 
       <ng-template
