--- a/libs/components/src/lib/components/tree-button/tree-button.component.html
+++ b/libs/components/src/lib/components/tree-button/tree-button.component.html
@@ -1,14 +1,12 @@
 <span [innerHTML]="space"></span>
-<span *ngIf="!removeIcon" [ngSwitch]="open" [class.hide]="!visibilityIcon">
-  <span *ngSwitchCase="true" (click)="!manualChange && changeOpenState(false)">
-    <ng-container *polymorphOutlet="iconOpen as icon; context: { size: this.size }">
-      <prizm-icons-full [name]="$any(icon)" [size]="size"></prizm-icons-full>
-    </ng-container>
-  </span>
-  <span *ngSwitchDefault (click)="!manualChange && changeOpenState(true)">
-    <ng-container *polymorphOutlet="iconClose as icon; context: { size: this.size }">
-      <prizm-icons-full [name]="$any(icon)" [size]="size"></prizm-icons-full>
-    </ng-container>
+<span *ngIf="!removeIcon" [class.hide]="!visibilityIcon">
+  <span (click)="!manualChange && changeOpenState(!open)">
+    <prizm-icons-full
+      class="chevron"
+      [name]="$any(iconClose)"
+      [size]="size"
+      [class.chevron_expanded]="open"
+    ></prizm-icons-full>
   </span>
 </span>
 <ng-content></ng-content>
