--- a/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu/prizm-navigation-menu.component.html
+++ b/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu/prizm-navigation-menu.component.html
@@ -36,32 +36,36 @@
       [toolbarExtraTemplate]="toolbarExtraTemplate"
     ></prizm-navigation-menu-toolbar>
   </header>
+  <prizm-scrollbar class="scrollable">
+    <main
+      class="prizm-navigation-menu__content groups-content"
+      [ngClass]="settingsConfiguration.selectedSize"
+    >
+      <ng-container *ngIf="menuGroups.length; else noGroups">
+        <section class="groups-content__top">
+          <ng-content></ng-content>
+          <ng-content select="[top]"></ng-content>
+        </section>
+        <section class="groups-content__bottom">
+          <ng-content select="[bottom]"></ng-content>
+        </section>
+      </ng-container>
 
-  <main class="prizm-navigation-menu__content groups-content" [ngClass]="settingsConfiguration.selectedSize">
-    <ng-container *ngIf="menuGroups.length; else noGroups">
-      <section class="groups-content__top">
-        <ng-content></ng-content>
-        <ng-content select="[top]"></ng-content>
-      </section>
-      <section class="groups-content__bottom">
-        <ng-content select="[bottom]"></ng-content>
-      </section>
-    </ng-container>
-
-    <ng-template #noGroups>
-      <div class="no-groups-content">
-        <prizm-navigation-menu-group
-          [groupId]="'prizm-navigation-menu-default-group'"
-          [hideGroupAppearance]="true"
-          [items]="items"
-          [toolbarExtraTemplate]="toolbarExtraTemplate"
-          [itemExtraTemplate]="itemExtraTemplate"
-          [searchConfig]="$any(menuSearchConfig$ | async)"
-          [toolbarConfig]="$any(menuToolbarConfig$ | async)"
-          [emptySearchResultMessageConfig]="$any(emptySearchResultMessageConfig$ | async)"
-          [emptyDataMessageConfig]="$any(emptyDataMessageConfig$ | async)"
-        ></prizm-navigation-menu-group>
-      </div>
-    </ng-template>
-  </main>
+      <ng-template #noGroups>
+        <div class="no-groups-content">
+          <prizm-navigation-menu-group
+            [groupId]="'prizm-navigation-menu-default-group'"
+            [hideGroupAppearance]="true"
+            [items]="items"
+            [toolbarExtraTemplate]="toolbarExtraTemplate"
+            [itemExtraTemplate]="itemExtraTemplate"
+            [searchConfig]="$any(menuSearchConfig$ | async)"
+            [toolbarConfig]="$any(menuToolbarConfig$ | async)"
+            [emptySearchResultMessageConfig]="$any(emptySearchResultMessageConfig$ | async)"
+            [emptyDataMessageConfig]="$any(emptyDataMessageConfig$ | async)"
+          ></prizm-navigation-menu-group>
+        </div>
+      </ng-template>
+    </main>
+  </prizm-scrollbar>
 </div>
