feat: add hint for input clear button #1515

--- a/apps/doc/src/app/components/input/input-layout-date-time/input-layout-date-time.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date-time/input-layout-date-time.component.html
@@ -41,6 +41,7 @@
         [position]="inputPosition"
         [status]="status"
         [forceClear]="forceClear"
+        [hideClearButtonHint]="hideClearButtonHint"
       >
         <prizm-input-layout-date-time
           #element
@@ -146,6 +147,16 @@
         documentationPropertyMode="input"
       >
         Show clear button
+      </ng-template>
+
+      <ng-template
+        [(documentationPropertyValue)]="hideClearButtonHint"
+        [documentationPropertyValues]="hideHintVariants"
+        documentationPropertyName="hideClearButtonHint"
+        documentationPropertyType="boolean | null"
+        documentationPropertyMode="input"
+      >
+        Hide clear button hint
       </ng-template>
 
       <ng-template
