--- a/apps/doc/src/app/components/input/input-carousel/input-carousel-example.component.html
+++ b/apps/doc/src/app/components/input/input-carousel/input-carousel-example.component.html
@@ -42,6 +42,7 @@
         [position]="inputPosition"
         [status]="status"
         [forceClear]="forceClear"
+        [hideClearButtonHint]="hideClearButtonHint"
       >
         <prizm-input-carousel
           #carousel
@@ -69,6 +70,16 @@
         documentationPropertyMode="input"
       >
         Show clear button
+      </ng-template>
+
+      <ng-template
+        [(documentationPropertyValue)]="hideClearButtonHint"
+        [documentationPropertyValues]="hideHintVariants"
+        documentationPropertyName="hideClearButtonHint"
+        documentationPropertyType="boolean | null"
+        documentationPropertyMode="input"
+      >
+        Hide clear button hint
       </ng-template>
 
       <ng-template
