--- a/apps/doc/src/app/components/input/input-layout-date-time-range/input-layout-date-time-range.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date-time-range/input-layout-date-time-range.component.html
@@ -25,6 +25,7 @@
         [position]="inputPosition"
         [status]="status"
         [forceClear]="forceClear"
+        [hideClearButtonHint]="hideClearButtonHint"
       >
         <prizm-input-layout-date-time-range
           #element
@@ -163,6 +164,16 @@
         documentationPropertyMode="input"
       >
         Show clear button
+      </ng-template>
+
+      <ng-template
+        [(documentationPropertyValue)]="hideClearButtonHint"
+        [documentationPropertyValues]="hideHintVariants"
+        documentationPropertyName="hideClearButtonHint"
+        documentationPropertyType="boolean | null"
+        documentationPropertyMode="input"
+      >
+        Hide clear button hint
       </ng-template>
 
       <ng-template
