--- a/apps/doc/src/app/components/input/input-layout-month-range/input-layout-month-range.component.html
+++ b/apps/doc/src/app/components/input/input-layout-month-range/input-layout-month-range.component.html
@@ -18,6 +18,7 @@
         [position]="inputPosition"
         [status]="status"
         [forceClear]="forceClear"
+        [hideClearButtonHint]="hideClearButtonHint"
       >
         <prizm-input-layout-month-range
           #inputControlElement
@@ -84,6 +85,16 @@
         documentationPropertyMode="input"
       >
         Show clear button
+      </ng-template>
+
+      <ng-template
+        [(documentationPropertyValue)]="hideClearButtonHint"
+        [documentationPropertyValues]="hideHintVariants"
+        documentationPropertyName="hideClearButtonHint"
+        documentationPropertyType="boolean | null"
+        documentationPropertyMode="input"
+      >
+        Hide clear button hint
       </ng-template>
 
       <ng-template
