--- a/apps/doc/src/app/components/input/input-multi-select/input-multi-select.component.html
+++ b/apps/doc/src/app/components/input/input-multi-select/input-multi-select.component.html
@@ -44,6 +44,7 @@
         [position]="inputPosition"
         [status]="status"
         [forceClear]="forceClear"
+        [hideClearButtonHint]="hideClearButtonHint"
       >
         <prizm-input-multi-select
           #element
@@ -244,6 +245,16 @@
         documentationPropertyMode="input"
       >
         Show clear button
+      </ng-template>
+
+      <ng-template
+        [(documentationPropertyValue)]="hideClearButtonHint"
+        [documentationPropertyValues]="hideHintVariants"
+        documentationPropertyName="hideClearButtonHint"
+        documentationPropertyType="boolean | null"
+        documentationPropertyMode="input"
+      >
+        Hide clear button hint
       </ng-template>
 
       <ng-template
