--- a/apps/doc/src/app/components/input/textarea/textarea-example.component.html
+++ b/apps/doc/src/app/components/input/textarea/textarea-example.component.html
@@ -26,6 +26,7 @@
         [status]="status"
         [position]="inputPosition"
         [forceClear]="forceClear"
+        [hideClearButtonHint]="hideClearButtonHint"
       >
         <textarea
           #element
@@ -49,6 +50,16 @@
         documentationPropertyMode="input"
       >
         Show clear button
+      </ng-template>
+
+      <ng-template
+        [(documentationPropertyValue)]="hideClearButtonHint"
+        [documentationPropertyValues]="hideHintVariants"
+        documentationPropertyName="hideClearButtonHint"
+        documentationPropertyType="boolean | null"
+        documentationPropertyMode="input"
+      >
+        Hide clear button hint
       </ng-template>
 
       <ng-template
