--- a/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu/prizm-navigation-menu.component.html
+++ b/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu/prizm-navigation-menu.component.html
@@ -36,23 +36,23 @@
       [toolbarExtraTemplate]="toolbarExtraTemplate"
     ></prizm-navigation-menu-toolbar>
   </header>
-  <prizm-scrollbar class="scrollable">
-    <main
-      class="prizm-navigation-menu__content groups-content"
-      [ngClass]="settingsConfiguration.selectedSize"
-    >
-      <ng-container *ngIf="menuGroups.length; else noGroups">
+
+  <main class="prizm-navigation-menu__content groups-content" [ngClass]="settingsConfiguration.selectedSize">
+    <ng-container *ngIf="menuGroups.length; else noGroups">
+      <prizm-scrollbar class="scrollable">
         <section class="groups-content__top">
           <ng-content></ng-content>
-          <ng-content select="[top]"></ng-content>
+          <!--<ng-content select="[top]"></ng-content>-->
         </section>
-        <section class="groups-content__bottom">
-          <ng-content select="[bottom]"></ng-content>
-        </section>
-      </ng-container>
+      </prizm-scrollbar>
+      <section class="groups-content__bottom">
+        <ng-content select="[bottom]"></ng-content>
+      </section>
+    </ng-container>
 
-      <ng-template #noGroups>
-        <div class="no-groups-content">
+    <ng-template #noGroups>
+      <prizm-scrollbar class="scrollable">
+        <div class="no-groups-content" [class.no-groups-content__empty]="!items?.length">
           <prizm-navigation-menu-group
             [groupId]="'prizm-navigation-menu-default-group'"
             [hideGroupAppearance]="true"
@@ -65,7 +65,7 @@
             [emptyDataMessageConfig]="$any(emptyDataMessageConfig$ | async)"
           ></prizm-navigation-menu-group>
         </div>
-      </ng-template>
-    </main>
-  </prizm-scrollbar>
+      </prizm-scrollbar>
+    </ng-template>
+  </main>
 </div>
