--- a/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu/prizm-navigation-menu.component.less
+++ b/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu/prizm-navigation-menu.component.less
@@ -7,7 +7,6 @@
   height: 100%;
   background: var(--prizm-v3-background-fill-primary);
   border-right: 1px solid var(--prizm-v3-background-stroke);
-  border-bottom: 1px solid var(--prizm-v3-background-stroke);
 
   &__header {
     overflow: hidden;
@@ -56,23 +55,29 @@
   }
 
   .scrollable {
-    width: 100%;
+    height: 100%;
+  }
+
+  .no-groups-content {
+    &__empty {
+      height: 100%;
+    }
   }
 
   .groups-content {
+    height: 100%;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
 
     &__top {
       flex: 1;
-      overflow: auto;
       display: flex;
       flex-direction: column;
     }
 
     &__bottom {
       flex-shrink: 1;
-      overflow: hidden;
     }
   }
 }
