--- a/apps/doc/src/app/documentation/about/about.component.html
+++ b/apps/doc/src/app/documentation/about/about.component.html
@@ -7,25 +7,25 @@
 
 <p class="prizm-space_top-0">Prizm includes the following `npm' packages:</p>
 
-<h4>@prizm-ui/core</h4>
+<h4>&#64;prizm-ui/core</h4>
 
 <p class="prizm-space_top-0">The main library for creating Angular components and elements using Prizm.</p>
 
-<h4>@prizm-ui/helpers</h4>
+<h4>&#64;prizm-ui/helpers</h4>
 
 <p class="prizm-space_top-0">
   Library to make it easy to create Angular applications. Contains Injectables Service, RxJS utilities,
   directives, and standard pipes.
 </p>
 
-<h4>@prizm-ui/components</h4>
+<h4>&#64;prizm-ui/components</h4>
 
 <p class="prizm-space_top-0">Prizm UI system design components library http://prizm.zyfra.com</p>
 
-<h4>@prizm-ui/charts</h4>
+<h4>&#64;prizm-ui/charts</h4>
 
 <p class="prizm-space_top-0">Library of components for work with charts</p>
 
-<h4>@prizm-ui/install</h4>
+<h4>&#64;prizm-ui/install</h4>
 
-<p class="prizm-space_top-0">Package installer @prizm-ui/* , Angular schematic ng-add</p>
+<p class="prizm-space_top-0">Package installer &#64;prizm-ui/* , Angular schematic ng-add</p>
