--- a/libs/components/src/lib/components/cron/components/schedule/schedule.component.less
+++ b/libs/components/src/lib/components/cron/components/schedule/schedule.component.less
@@ -13,6 +13,7 @@
     justify-content: center;
     padding: 0 4px;
     color: var(--prizm-v3-text-icon-secondary);
+    border: 1px solid transparent;
 
     &.item.selected {
       background-color: var(--prizm-v3-button-primary-solid-default);
