--- a/apps/doc/src/app/components/file-upload/examples/i18n/file-upload-i18n-example.component.html
+++ b/apps/doc/src/app/components/file-upload/examples/i18n/file-upload-i18n-example.component.html
@@ -1,8 +1,8 @@
 <prizm-file-upload
   [multiple]="true"
-  [accept]="'image/*'"
+  [accept]="acceptedTypes"
   [progress]="$any(progress$$ | async)"
-  [maxFilesCount]="3"
+  [maxFilesCount]="maxFiles"
   [maxFileSize]="1000000"
   [disabled]="disabled"
   (filesChange)="onFilesChange($event)"
@@ -11,7 +11,9 @@
   (retry)="retry($event)"
 >
   <ng-container *prizmIfLang="'russian'; else eng">
-    Максимум три изображения размером не более 1МБ
+    Загружено {{ files.length }}/{{ maxFiles }}. {{ acceptedTypes }} размером не более 1МБ.
   </ng-container>
-  <ng-template #eng> Maximum of three images up to 1MB in size </ng-template>
+  <ng-template #eng>
+    Uploaded {{ files.length }}/{{ maxFiles }}. {{ acceptedTypes }} up to 1MB in size
+  </ng-template>
 </prizm-file-upload>
