--- a/libs/components/src/lib/components/file-upload/file-upload.component.html
+++ b/libs/components/src/lib/components/file-upload/file-upload.component.html
@@ -58,7 +58,9 @@
           <span class="file__name" #fileName>{{ item.key | prizmFileName }}</span>
           <span class="file__extension">{{ item.key | prizmFileExtension }}</span>
         </div>
-        <span class="file__size">{{ item.value.file.size | prizmFileSize }}</span>
+        <span class="file__size" *prizmLet="item.value.file.size | prizmFileSize as fileSize">
+          {{ fileSize.value + ' ' }} {{ translations | prizmPluck : [fileSize.key] }}
+        </span>
       </div>
 
       <div class="file__stage">
