fix(components/input-date-relative): active items not updated when value set by formControl #1685

--- a/apps/doc/src/app/components/input/input-layout-date-relative/examples/base/input-layout-date-relative-base-example.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date-relative/examples/base/input-layout-date-relative-base-example.component.html
@@ -1,3 +1,8 @@
 <prizm-input-layout label="Относительное время">
   <prizm-input-layout-date-relative [formControl]="valueControl"></prizm-input-layout-date-relative>
 </prizm-input-layout>
+
+<br />
+<br />
+
+<button (click)="changeDate()" prizmButton appearance="primary" size="l">Изменить дату</button>
