fix(components/file-upload): fix styles for size #000

--- a/libs/components/src/lib/components/file-upload/file-upload.component.less
+++ b/libs/components/src/lib/components/file-upload/file-upload.component.less
@@ -119,6 +119,7 @@
     font-size: 10px;
     line-height: 12px;
     color: var(--prizm-text-icon-tertiary);
+    white-space: nowrap;
   }
 
   &__stage {
